--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>negeD roulette</title>
+    <title>negeD 🎲</title>
     <meta name="description" content="Try your luck with reversed hats" />
 
     <!-- FONTS -->
