Add og, upd favicon

--- a/index.html
+++ b/index.html
@@ -46,6 +46,31 @@
     <meta name="msapplication-TileColor" content="#192438" />
     <meta name="msapplication-config" content="/favicon/browserconfig.xml" />
     <meta name="theme-color" content="#192438" />
+
+    <!-- Open Graph -->
+    <meta property="og:url" content="https://spin.neged.site" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="negeD" />
+    <meta property="og:image" content="https://spin.neged.site/og.jpg" />
+    <meta property="og:title" content="neged" />
+    <meta property="og:description" content="Try your luck" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://spin.neged.site" />
+    <meta name="twitter:title" content="negeD" />
+    <meta name="twitter:description" content="Try your luck" />
+    <meta name="twitter:site" content="@negedcoin" />
+    <meta name="twitter:image" content="https://spin.neged.site/og.jpg" />
+    <meta name="twitter:creator" content="@negedcoin" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Space+Grotesk:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>Please, turn on JavaScript to see this page.</noscript>
