--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
     <meta name="theme-color" content="#192438" />
 
     <!-- Open Graph -->
-    <meta property="og:url" content="https://spin.neged.site" />
+    <meta property="og:url" content="https://neged-hat.site" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="negeD" />
-    <meta property="og:image" content="https://spin.neged.site/og.jpg" />
+    <meta property="og:image" content="https://neged-hat.site/og.jpg" />
     <meta property="og:title" content="neged" />
     <meta property="og:description" content="Try your luck" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://spin.neged.site" />
+    <meta property="twitter:url" content="https://neged-hat.site" />
     <meta name="twitter:title" content="negeD" />
     <meta name="twitter:description" content="Try your luck" />
     <meta name="twitter:site" content="@negedcoin" />
-    <meta name="twitter:image" content="https://spin.neged.site/og.jpg" />
+    <meta name="twitter:image" content="https://neged-hat.site/og.jpg" />
     <meta name="twitter:creator" content="@negedcoin" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
