Add dm action to faq modal

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>negeD 🎲</title>
     <meta name="description" content="Try your luck with reversed hats" />
 
+    <!-- PRELOAD  -->
+    <link rel="preload" as="image" href="/img/neged-hat.png" />
+
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
