Implement token swaps

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
   <body>
     <noscript>Please, turn on JavaScript to see this page.</noscript>
     <div id="root" />
+    <script type="module">
+      window.Browser = {
+        T: () => {},
+      }
+    </script>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
