--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <noscript>Please, turn on JavaScript to see this page.</noscript>
     <div id="root" />
     <script type="module">
+      // required for Uniswap to work
       window.Browser = {
         T: () => {},
       }
