Fix visual issues

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" style="background-color: #180431">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, interactive-widget=resizes-content"
+    />
+
     <title>negeD 🎲</title>
     <meta name="description" content="Try your luck with reversed hats" />
 
