--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="background-color: #180431">
+<html lang="en" style="background-color: #03001c">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -7,8 +7,8 @@
       content="width=device-width, initial-scale=1, interactive-widget=resizes-content"
     />
 
-    <title>negeD 🎲</title>
-    <meta name="description" content="Try your luck with reversed hats" />
+    <title>DEGEN FLIP</title>
+    <meta name="description" content="Try your luck" />
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -52,21 +52,21 @@
     <meta name="theme-color" content="#192438" />
 
     <!-- Open Graph -->
-    <meta property="og:url" content="https://neged-hat.app" />
+    <meta property="og:url" content="https://degenflip.xyz" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="negeD" />
-    <meta property="og:image" content="https://neged-hat.app/og.jpg" />
+    <meta property="og:image" content="https://degenflip.xyz/og.jpg" />
     <meta property="og:title" content="neged" />
     <meta property="og:description" content="Try your luck" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://neged-hat.app" />
+    <meta property="twitter:url" content="https://degenflip.xyz" />
     <meta name="twitter:title" content="negeD" />
     <meta name="twitter:description" content="Try your luck" />
     <meta name="twitter:site" content="@negedcoin" />
-    <meta name="twitter:image" content="https://neged-hat.app/og.jpg" />
+    <meta name="twitter:image" content="https://degenflip.xyz/og.jpg" />
     <meta name="twitter:creator" content="@negedcoin" />
   </head>
   <body>
