--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
     <meta name="apple-mobile-web-app-title" content="DEGEN FLIP" />
     <link rel="manifest" href="/favicon/site.webmanifest" />
 
+    <!-- FC -->
+    <meta
+      name="fc:frame"
+      content='{"version":"next","imageUrl":"https://github.com/0xneged/neged-roulette-frontend/blob/f6b41af236c8f59d7d15cffffcd6a9af5c19abec/public/favicon/web-app-manifest-512x512.png?raw=true","button":{"title":"Flip the degen","action":{"type":"launch_frame","name":"DEGEN FLIP","splashImageUrl":"https://github.com/0xneged/neged-roulette-frontend/blob/f6b41af236c8f59d7d15cffffcd6a9af5c19abec/public/favicon/web-app-manifest-512x512.png?raw=true","splashBackgroundColor":"#03001c"}}}'
+    />
+
     <!-- Open Graph -->
     <meta property="og:url" content="https://degenflip.xyz" />
     <meta property="og:type" content="website" />
