--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- FC -->
     <meta
       name="fc:frame"
-      content='{"version":"next","imageUrl":"https://github.com/0xneged/neged-roulette-frontend/blob/f6b41af236c8f59d7d15cffffcd6a9af5c19abec/public/favicon/web-app-manifest-512x512.png?raw=true","button":{"title":"Flip the degen","action":{"type":"launch_frame","name":"DEGEN FLIP","splashImageUrl":"https://github.com/0xneged/neged-roulette-frontend/blob/f6b41af236c8f59d7d15cffffcd6a9af5c19abec/public/favicon/web-app-manifest-512x512.png?raw=true","splashBackgroundColor":"#03001c"}}}'
+      content='{"version":"next","imageUrl":"https://github.com/user-attachments/assets/f604f8f6-c081-49ba-971c-925431da3506","button":{"title":"Flip the degen","action":{"type":"launch_frame","name":"DEGEN FLIP","splashImageUrl":"https://github.com/user-attachments/assets/8b7b40cf-9132-4fe7-819d-d4357d37bb57","splashBackgroundColor":"#03001c"}}}'
     />
 
     <!-- Open Graph -->
