--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
     <title>DEGEN FLIP</title>
     <meta name="description" content="Try your luck" />
+    <!-- FC -->
+    <meta
+      name="fc:frame"
+      content='{"version":"next","imageUrl":"https://www.degenflip.xyz/og.jpg","button":{"title":"Launch","action":{"type":"launch_frame","name":"DEGEN FLIP","url":"https://www.degenflip.xyz","splashImageUrl":"https://www.degenflip.xyz/favicon/web-app-manifest-192x192.png","splashBackgroundColor":"#03001c"}}}'
+    />
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -38,12 +43,6 @@
     />
     <meta name="apple-mobile-web-app-title" content="DEGEN FLIP" />
     <link rel="manifest" href="/favicon/site.webmanifest" />
-
-    <!-- FC -->
-    <meta
-      name="fc:frame"
-      content='{"version":"next","imageUrl":"https://github.com/user-attachments/assets/f604f8f6-c081-49ba-971c-925431da3506","button":{"title":"Flip 🪙","action":{"type":"launch_frame","name":"DEGEN FLIP","splashImageUrl":"https://github.com/user-attachments/assets/8b7b40cf-9132-4fe7-819d-d4357d37bb57","splashBackgroundColor":"#03001c"}}}'
-    />
 
     <!-- Open Graph -->
     <meta property="og:url" content="https://degenflip.xyz" />
